# visual_nozzle

./: README.md
rs485_fire/: CMakeLists.txt  package.xml
rs485_fire/config/: trajectory_angles.csv
rs485_fire/launch/: all_in_one_launch copy.py  all_in_one_launch.py  final_spray_launch.py  new_all_launch.py  test_wrapper_launch.py
rs485_fire/src/: alignment_controller_node copy.py  alignment_controller_node.py  shutdown_monitor.py  shutdown_trigger_node.py
rs485_fire/src/MIX_test/: calibration_LR.json  calibration_updo.json  io_senser.py  marge_motor_pump.py  marge_motor_pump_final.py  open_LR.py  open_updo.py  pump.py  spary_motor_pump.py  spray_executor_node copy 2.py  spray_executor_node copy 3.py  spray_executor_node copy.py  spray_executor_node.py
rs485_fire/src/MIX_test/common/: __init__.py  utilities.py
rs485_fire/src/MIX_test/motor_control/: dual_motor.py  motor1.py  motor2.py
rs485_fire/src/MIX_test/trajectories/: speed_calc.py  spray_trajectories_final.py  spray_trajectories_final_node.py  spray_trajectories_high.py
thermal_camera/: CMakeLists.txt  package.xml
thermal_camera/config/: realsense_params.yaml  thermal_camera_params.yaml
thermal_camera/include/thermal_camera/: guideusb2livestream.h  ir_camera_node.hpp
thermal_camera/launch/: fire_all_launch.py  fire_detection_launch.py  thermal_camera_launch.py  thermal_inference_launch.py
thermal_camera/scripts/: H_avg.npy  camera_calibration_circle copy.py  camera_calibration_circle.py  check-homography.py  dual_camera_calibrator.py  evaluate_homography_error.py  fire_detection copy_2.py  fire_detection copy_ok.py  fire_detection.py  fire_detection_0811_ok.py  fire_detection_0815.py  fire_detection_okok copy.py  generate_average_homography.py  generate_calib_npz.py  realsense_Correction.py  realsense_no_correction.py  realsense_test_rgb_depth.py  refit_homography.py  single_camera_calibration.py  solvepnp.py  stereo_calibrate copy.py  stereo_calibrate.py  stereo_calibration_from_npz_folder.py  thermal_align_viewer.py  thermal_fusion_node.py  thermal_fusion_node_ok.py  thermal_fusion_node_test.py  thermal_realsense_align_homography.py  thermal_stereo_fusion_node.py  thermal_to_3d.py  thermal_to_rgb_pixel_node copy.py  thermal_to_rgb_pixel_node.py  thermal_to_rgb_pixel_node_ok copy.py  triangulate_node.py  triangulate_stereo_point.py
thermal_camera/scripts/calibration_20250621_151258/: calibration_data.npz
thermal_camera/scripts/calibration_20250621_152657/: calibration_data.npz
thermal_camera/scripts/dual_calib_20250628_123046/: H_avg.npy  H_error_map.npy  calibration_data.npz  points_0.npz  points_1.npz  points_10.npz  points_11.npz  points_12.npz  points_13.npz  points_14.npz  points_15.npz  points_16.npz  points_17.npz  points_18.npz  points_19.npz  points_2.npz  points_20.npz  points_21.npz  points_22.npz  points_23.npz  points_24.npz  points_25.npz  points_26.npz  points_27.npz  points_28.npz  points_29.npz  points_3.npz  points_30.npz  points_31.npz  points_32.npz  points_33.npz  points_34.npz  points_35.npz  points_36.npz  points_37.npz  points_38.npz  points_39.npz  points_4.npz  points_40.npz  points_41.npz  (+21 more)
thermal_camera/scripts/realsense_20250621_162547/: calibration_data.npz
thermal_camera/src/: apply_homography.py  calculate_homography.py  image_clicker.py  ir_camera_node copy.cpp  ir_camera_node.cpp  ir_camera_node_ok.cpp  ir_camera_node_thermal_test.cpp
