<?xml version="1.0"?>
<package format="3">
  <name>thermal_camera</name>
  <version>0.0.1</version>
  <description>Thermal Camera ROS2 Package</description>
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>std_msgs</depend>
  <depend>OpenCV</depend>
  <depend>rosidl_default_generators</depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>ultralytics</exec_depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
